// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 1
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 2
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 3
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 4
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="ant-list ant-list-split"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-empty-text"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    />
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="ant-list demo-loadmore-list ant-list-split ant-list-loading ant-list-something-after-last-item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height:53px"
      />
    </div>
  </div>
  <div
    style="text-align:center;margin-top:12px;height:32px;line-height:32px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        loading more
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 5
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 6
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-lg ant-list-split ant-list-something-after-last-item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 0
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <svg
                    aria-hidden="true"
                    class="anticon"
                    data-icon="message"
                    fill="currentColor"
                    height="1em"
                    style="margin-right:8px"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M775.1 248.9c-34.3-34.3-74.4-61.3-119-80C610.5 149.7 562 140 512 140h-1.7c-99.6.4-193 39.5-262.8 109.9-69.8 70.4-108 164.1-107.6 263.8.3 60.3 15.3 120.2 43.5 173.1l4.5 8.4V836h140.8l8.4 4.5c52.9 28.2 112.7 43.3 173.1 43.5h1.7c99 0 192-38.2 262-107.6 70.5-69.8 109.5-163.1 109.9-262.8.2-50.6-9.5-99.7-28.9-145.8-18.5-44.6-45.4-84.6-79.8-118.9zM312 560c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z"
                      fill="none"
                    />
                    <circle
                      cx="512"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="712"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="312"
                      cy="512"
                      r="48"
                    />
                    <path
                      d="M925.2 338.4c-22.6-53.7-55-101.9-96.3-143.3-41.3-41.3-89.5-73.8-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9-53.3 22.8-101.1 55.2-142 96.5-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9.3 69.4 16.9 138.3 48 199.9v152c0 25.4 20.6 46 46 46h152.1c61.6 31.1 130.5 47.7 199.9 48h2.1c59.9 0 118-11.6 172.7-34.3 53.5-22.3 101.6-54.3 142.8-95.2 41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                    />
                  </svg>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <svg
                    aria-hidden="true"
                    class="anticon"
                    data-icon="message"
                    fill="currentColor"
                    height="1em"
                    style="margin-right:8px"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M775.1 248.9c-34.3-34.3-74.4-61.3-119-80C610.5 149.7 562 140 512 140h-1.7c-99.6.4-193 39.5-262.8 109.9-69.8 70.4-108 164.1-107.6 263.8.3 60.3 15.3 120.2 43.5 173.1l4.5 8.4V836h140.8l8.4 4.5c52.9 28.2 112.7 43.3 173.1 43.5h1.7c99 0 192-38.2 262-107.6 70.5-69.8 109.5-163.1 109.9-262.8.2-50.6-9.5-99.7-28.9-145.8-18.5-44.6-45.4-84.6-79.8-118.9zM312 560c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z"
                      fill="none"
                    />
                    <circle
                      cx="512"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="712"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="312"
                      cy="512"
                      r="48"
                    />
                    <path
                      d="M925.2 338.4c-22.6-53.7-55-101.9-96.3-143.3-41.3-41.3-89.5-73.8-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9-53.3 22.8-101.1 55.2-142 96.5-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9.3 69.4 16.9 138.3 48 199.9v152c0 25.4 20.6 46 46 46h152.1c61.6 31.1 130.5 47.7 199.9 48h2.1c59.9 0 118-11.6 172.7-34.3 53.5-22.3 101.6-54.3 142.8-95.2 41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                    />
                  </svg>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <svg
                    aria-hidden="true"
                    class="anticon"
                    data-icon="message"
                    fill="currentColor"
                    height="1em"
                    style="margin-right:8px"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M775.1 248.9c-34.3-34.3-74.4-61.3-119-80C610.5 149.7 562 140 512 140h-1.7c-99.6.4-193 39.5-262.8 109.9-69.8 70.4-108 164.1-107.6 263.8.3 60.3 15.3 120.2 43.5 173.1l4.5 8.4V836h140.8l8.4 4.5c52.9 28.2 112.7 43.3 173.1 43.5h1.7c99 0 192-38.2 262-107.6 70.5-69.8 109.5-163.1 109.9-262.8.2-50.6-9.5-99.7-28.9-145.8-18.5-44.6-45.4-84.6-79.8-118.9zM312 560c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm200 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z"
                      fill="none"
                    />
                    <circle
                      cx="512"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="712"
                      cy="512"
                      r="48"
                    />
                    <circle
                      cx="312"
                      cy="512"
                      r="48"
                    />
                    <path
                      d="M925.2 338.4c-22.6-53.7-55-101.9-96.3-143.3-41.3-41.3-89.5-73.8-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9-53.3 22.8-101.1 55.2-142 96.5-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9.3 69.4 16.9 138.3 48 199.9v152c0 25.4 20.6 46 46 46h152.1c61.6 31.1 130.5 47.7 199.9 48h2.1c59.9 0 118-11.6 172.7-34.3 53.5-22.3 101.6-54.3 142.8-95.2 41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                    />
                  </svg>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div>
      <b>
        ant design
      </b>
       footer part
    </div>
  </div>
  <div
    class="ant-list-pagination"
  >
    <ul
      class="ant-pagination "
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-prev"
        title="Previous Page"
      >
        <a
          class="ant-pagination-item-link"
        />
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-6"
        tabindex="0"
        title="6"
      >
        <a>
          6
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-7"
        tabindex="0"
        title="7"
      >
        <a>
          7
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-8"
        tabindex="0"
        title="8"
      >
        <a>
          8
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" ant-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <a
          class="ant-pagination-item-link"
        />
      </li>
    </ul>
  </div>
</div>
`;
